style - fixed spacing around hamburger

--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ h4  {
 }
 
 .nav-link:active, .nav-link:hover {
-  background-color: #ddd;
+  background-color: #f2f2f2;
   color: #451b16;
   font-weight: 900;
 }
@@ -51,9 +51,17 @@ h4  {
 
 .custom-toggler.navbar-toggler {
   border-color: #f2f2f2;
+  margin: 0.5rem;
+  position: relative;
 }
 
 .custom-toggler .navbar-toggler-icon {
+  position: relative;
+  display: inline-block;
+  width: 0.5em;
+  height: 0.5em;
+  vertical-align: middle;
+  content: "";
   background-image: url(
 "data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(242, 242, 242, 242)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
